# miscellaneous

./: CMakeLists.txt  main.cpp
cmake/modules/: FindFFmpeg.cmake
ffmpeg/: CMakeLists.txt  ffmpeg_encoder.cpp  ffmpeg_test.cpp
ipcCode/sockets/: client_unix  server.c  server_unix
misce_tests/: IEEE-754-float.cpp  README.md
misce_tests/OpenCV/: CMakeLists.txt  iou.cpp  test_opencv.cpp  traverse_triangle.cpp
misce_tests/generate_unique_seq_id/: main.cpp
misce_tests/shared_ptr_usecount/: main.cpp
misce_tests/singleton_destructor/: CMakeLists.txt  singleton.cpp
misce_tests/singleton_protected_constructor/: CMakeLists.txt  main.cpp
misce_tests/socket/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  socket_client.cpp  socket_server.cpp  unix_domain_socket_client.c  unix_domain_socket_server.c
misce_tests/stringstream/: CMakeLists.txt  stringstream.cpp
misce_tests/stringstream/stringstream.dSYM/Contents/Resources/DWARF/: stringstream
misce_tests/test_fscanf/: main.cpp  obj.txt
misce_tests/test_so/: CMakeLists.txt  myfunc.cpp
misce_tests/thread_id/: main.cpp
misce_tests/vector_deque_clear/: main.cpp
python/: bbox_drawer_using_canvas.py  collect_magic_and_downsample.py  convertMp4ToH264.py  extract_assets.py  scp_to_remote.py  show_coordinate.py  simple_web_server_boxcallback.py
shell/: compare_detect_rect_num.sh
struct_and_algo/: CMakeLists.txt  permutation.cpp  priority_queue.cpp  reverse_polish_notation.cpp
